force-app/main/default/objects/BCSolicitante__c/fields/BCCatastro__c.field-meta.xml
<CustomField>
    <fullName>BCCatastro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catastro</label>
    <referenceTo>BCCatastro__c</referenceTo>
    <relationshipLabel>Solicitantes</relationshipLabel>
    <relationshipName>Solicitantes</relationshipName>
    <type>Lookup</type>
</CustomField>