force-app/main/default/objects/BCSolicitante__c/fields/BCLote__c.field-meta.xml
<CustomField>
    <fullName>BCLote__c</fullName>
    <label>Lote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>