force-app/main/default/objects/BCSolicitante__c/fields/BCManzana__c.field-meta.xml
<CustomField>
    <fullName>BCManzana__c</fullName>
    <label>Manzana</label>
    <length>255</length>
    <type>Text</type>
</CustomField>