force-app/main/default/objects/BCSolicitante__c/fields/BCPHH__c.field-meta.xml
<CustomField>
    <fullName>BCPHH__c</fullName>
    <label>PHH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>