force-app/main/default/objects/BCSolicitante__c/recordTypes/BCElementodeseguridad.recordType-meta.xml
<RecordType>
    <fullName>BCElementodeseguridad</fullName>
    <active>true</active>
    <description>Elemento de seguridad</description>
    <label>Elemento de seguridad</label>
</RecordType>